from enum import Enum


class Action(Enum):
    METRICS_CHECK = 0
